Bug 413010 - "Times" setting does not respect 12/24hr time choice
Summary: "Times" setting does not respect 12/24hr time choice
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_nighttime (other bugs)
Version First Reported In: 5.17.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 460879 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-15 23:49 UTC by Spencer
Modified: 2025-09-05 16:41 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Spencer 2019-10-15 23:49:53 UTC
SUMMARY
night color: "times" setting does not respect 12/24hr time choice

STEPS TO REPRODUCE
1. open system settings
2. display and monitor>night color
3. select times
4. only HH:MM is supported and no HH:MM:AM/PM

EXPECTED RESULT
time choice is respected



SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David Edmundson 2021-09-09 15:50:36 UTC
*** Bug 415028 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2022-10-24 20:08:21 UTC
*** Bug 460879 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2025-05-19 18:08:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5496
Comment 4 Bug Janitor Service 2025-05-19 18:08:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5496
Comment 5 Vlad Zahorodnii 2025-09-05 14:04:09 UTC
Git commit ae5186ffb8ee48624b1a1d24d862119ac6a71df0 by Vlad Zahorodnii.
Committed on 05/09/2025 at 13:25.
Pushed by vladz into branch 'master'.

kcms/nighttime: Finish support for 12-hour format

The KCM supports 12-hour format pretty much everywhere except the time
fields.

M  +5    -0    kcms/nighttime/kcm.cpp
M  +3    -0    kcms/nighttime/kcm.h
M  +52   -4    kcms/nighttime/ui/TimeField.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/ae5186ffb8ee48624b1a1d24d862119ac6a71df0