kcms/nighttime: Finish support for 12-hour format

The KCM supports 12-hour format pretty much everywhere except the time
fields.

BUG: 413010