kcms/nighttime/ui/TimeField.qml
@@ -11,6 +11,8 @@ import QtQuick.Layouts
 RowLayout {
     id: root
 
+    readonly property var locale: Qt.locale()
+    readonly property bool isAmPm: locale.timeFormat().toUpperCase().includes("AP")
     property date value: new Date()
 
     signal activated(value: date)
@@ -19,8 +21,8 @@ RowLayout {
 
     QQC2.SpinBox {
         id: hoursSpinBox
-        from: 0
-        to: 23
+        from: isAmPm ? 1 : 0
+        to: isAmPm ? 12 : 23
         wrap: true
         onValueModified: notify();
     }
@@ -38,15 +40,61 @@ RowLayout {
         onValueModified: notify();
     }
 
+    QQC2.SpinBox {
+        id: amPmSpinBox
+
+        readonly property list<string> items: [root.locale.amText, root.locale.pmText]
+
+        visible: isAmPm
+        from: 0
+        to: items.length - 1
+        wrap: true
+        validator: RegularExpressionValidator {
+            regularExpression: new RegExp("(" + amPmSpinBox.items.map(meridiem => kcm.escapeRegExp(meridiem)).join("|") + ")", "i")
+        }
+        textFromValue: function(value, locale) {
+            return items[value];
+        }
+        valueFromText: function(text, locale) {
+            const upperText = text.toUpperCase();
+            for (const [index, value] of items.entries()) {
+                if (value.toUpperCase() === upperText) {
+                    return index;
+                }
+            }
+            return value;
+        }
+        onValueModified: notify();
+    }
+
     function notify(): void {
+        let hours = hoursSpinBox.value;
+        if (isAmPm) {
+            if (hours === 12) {
+                hours = 0;
+            }
+            if (amPmSpinBox.value === 1) { // pm
+                hours += 12;
+            }
+        }
+
         const date = new Date();
-        date.setHours(hoursSpinBox.value, minutesSpinBox.value, 0, 0);
+        date.setHours(hours, minutesSpinBox.value, 0, 0);
         activated(date);
     }
 
     function refresh(): void {
-        hoursSpinBox.value = value.getHours();
+        let hours = value.getHours();
+        if (isAmPm) {
+            hours %= 12;
+            if (hours === 0) {
+                hours = 12;
+            }
+        }
+
+        hoursSpinBox.value = hours;
         minutesSpinBox.value = value.getMinutes();
+        amPmSpinBox.value = value.getHours() >= 12;
     }
 
     Component.onCompleted: refresh();
